# miro-tauri-player

./: .gitignore  README.md  blessing.txt  index.html  package-lock.json  package.json  tailwind.config.js
src/: ApiTesterSlide.css  ApiTesterSlide.tsx  ContactInfoSlide.tsx  EventMessage.tsx  InteractionContext.ts  LogViewerSlide.tsx  PlayerApp.css  PlayerApp.tsx  PortalManager.css  PortalManager.tsx  SlideDecoration.tsx  SlideManager.tsx  TauriApiTester.css  TauriApiTester.tsx  main.css  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: emitter.rs  main.rs  taurithread.rs  udpserver.rs  wsserver.rs
src/sections/: README.md
src/sections/PlayerSection/: MediaSlot.tsx  MediaSlots.tsx  index.tsx  styles.css
src/widgets/: CenteredCard.tsx  DockedPanel.tsx  LinearProgressBar.tsx  SvgLogo.tsx
unused/: wsserver.rs.txt
