[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.6.2", features = [ "dialog-open", "shell-all", "dialog-ask", "dialog-confirm", "dialog-message"] }
random = "0.14.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4.17"
env_logger = "0.11.3"
once_cell = "1.8"
time = "0.3.36"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
